@@ -4490,7 +4490,7 @@ pcache_db_open2(
 			AttributeAssertion	ava = ATTRIBUTEASSERTION_INIT;
 			AttributeName	attrs[ 2 ] = {{{ 0 }}};
 
-			connection_fake_init( &conn, &opbuf, thrctx );
+			connection_fake_init2( &conn, &opbuf, thrctx, 0 );
 			op = &opbuf.ob_op;
 
 			op->o_bd = &cm->db;
@@ -4676,7 +4676,7 @@ pcache_db_close(
 
 		thrctx = ldap_pvt_thread_pool_context();
 
-		connection_fake_init( &conn, &opbuf, thrctx );
+		connection_fake_init2( &conn, &opbuf, thrctx, 0 );
 		op = &opbuf.ob_op;
 
 		if ( qm->templates != NULL ) {
